--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@600;800;900&family=Outfit:wght@300&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="./style/style.css">
+  <link rel="stylesheet" href="style/style.css">
 
 </head>
 <body>
@@ -66,8 +66,8 @@
         </p> 
         
         <button> 
-          <a href="./location.html"> Our location </a> 
-          <img src="./assets/icon-arrow-right.svg" alt="">
+          <a href="location.html"> Our location </a> 
+          <img src="assets/icon-arrow-right.svg" alt="">
         </button>
 
       </div>
@@ -194,7 +194,7 @@
 
   <footer>
 
-    <img src="/starter-code/assets/logo-light.svg" alt="">    
+    <img src="assets/logo-light.svg" alt="">    
     
     <p class="footer-text">
       The Modern Art Gallery is free to all visitors and open seven days a week 
